@@ -2,17 +2,17 @@
 
 [![SonarCloud](https://sonarcloud.io/api/project_badges/measure?project=alessiosechi_Wastelligent&metric=alert_status)](https://sonarcloud.io/project/overview?id=alessiosechi_Wastelligent)
 
-Wastelligent è un sistema progettato per consentire ai cittadini di segnalare rifiuti abbandonati e discariche illegali, monitorando e coordinando la loro rimozione. Il sistema premia attivamente la partecipazione, incentivando il coinvolgimento nella cura dell'ambiente e nella prevenzione dell'inquinamento.
+Wastelligent è un sistema progettato per consentire ai cittadini di segnalare rifiuti abbandonati e discariche illegali, monitorando e coordinando la loro rimozione. Il sistema premia attivamente la partecipazione, incentivando il coinvolgimento nella tutela dell'ambiente e nella prevenzione dell'inquinamento.
 
 ## Tipologie di utenti
 
 Il sistema prevede tre tipi di utenti:
 
-- **Utente base**: può segnalare la presenza di rifiuti abbandonati e discariche illegali, indicando la posizione, una descrizione del problema e, se possibile, una foto. Può anche partecipare attivamente alla risoluzione della segnalazione.
+- **Utente base**: può segnalare la presenza di rifiuti abbandonati e discariche illegali, indicando la posizione, una descrizione del problema e, se possibile, una foto.
   
-- **Esperto ecologico**: riceve le segnalazioni degli utenti base e le assegna agli operatori ecologici disponibili per la rimozione dei rifiuti.
+- **Esperto ecologico**: riceve le segnalazioni inviate dagli utenti base e le assegna agli operatori ecologici disponibili per la rimozione dei rifiuti.
 
-- **Operatore ecologico**: dopo aver ricevuto l'assegnazione di una segnalazione, l'operatore ecologico interviene per la rimozione dei rifiuti e segna la segnalazione come completata una volta risolto il problema.
+- **Operatore ecologico**: dopo aver ricevuto l'assegnazione di una segnalazione, interviene per la rimozione dei rifiuti e contrassegna la segnalazione come completata al termine dell'intervento.
 
 ## Programma di ricompense
 
@@ -26,22 +26,22 @@ Per incentivare la partecipazione degli utenti, il sistema include un programma 
 
 - **JavaFX**: Per eseguire il progetto, è necessario scaricare JavaFX dal [sito ufficiale](https://openjfx.io/) e configurarlo correttamente nell'ambiente di sviluppo (Eclipse, IntelliJ, o un altro IDE).
 
-### Configurazione dell'ambiente
+### Configurazione
 
 1. **Configurazione JavaFX**:
-   - Visitare il sito ufficiale di JavaFX e scaricare l'ultima versione.
    - Seguire le istruzioni per configurare JavaFX all'interno dell'IDE.
+   - Specificare i seguenti **VM arguments**:
+     ```
+     --module-path "<percorso-javafx>/lib" --add-modules javafx.controls,javafx.fxml,javafx.web
+     ```
 
 2. **Clonare la repository**:
    - Clonare questo repository nella propria macchina locale:
      ```bash
      git clone https://github.com/alessiosechi/Wastelligent.git
      ```
-     
-3. **Importare il progetto**:
-   - Dopo aver clonato il progetto, aprire l'IDE (Eclipse o un altro).
-   - Importare il progetto selezionando **File** > **Import** > **Existing Projects into Workspace**.
-   - Selezionare la cartella del progetto clonato.
+
+3. **Importare il progetto**.
 
 4. **Configurare le dipendenze**:
    - All'interno della cartella del progetto, è presente una cartella chiamata **libs**. Questa cartella contiene tutti i file `.jar` necessari per il progetto.
@@ -51,9 +51,10 @@ Per incentivare la partecipazione degli utenti, il sistema include un programma 
      - Eseguire lo script SQL presente nella cartella DB attraverso il software HeidiSQL per creare le tabelle necessarie.
      - Modificare il file `resources/db.properties` per configurare la connessione al proprio database MySQL. 
    
+---
+
 ### Esecuzione dell'applicazione
 
-Se non è stato creato il database, avviare l'applicazione e scegliere di **utilizzare la versione demo**. Altrimenti, se il database è stato creato, scegliere la versione che si desidera utilizzare.
-   
+**Se non è stato creato il database**, avviare l'applicazione e scegliere di **utilizzare la versione demo**. Altrimenti, se il database è stato creato, scegliere la versione che si desidera utilizzare.   
    
 
